# ja2-experiments

./: .gitignore  CHANGELOG.md  CMakeLists.txt  JA2.sln  Makefile  README.md  todo.txt  xx.py
.github/workflows/: build.yml  linux-build.yml  msbuild.yml  rust-build.yml
bin-linux/: main.c
bin-win32/: CMakeLists.txt  Cinematics.c  JA2.vcxproj  RAD.h  main_win.c
docs/: bug-hunting.md  cross-platform-notes.md  experiments.md  git-bisect.md  localization.md
docs/internal/: 16bit-graphics.md  big-change-video-cleanup-2412.md  swordfish.md  vsurface.md
ja2/: .gitignore
ja2/tester/: tester.vcxproj
ja2lib/: Alloc.c  Alloc.h  AniViewScreen.c  BuildDefines.h  CMakeLists.txt  CharList.c  CharList.h  Cheats.h  CmdLine.c  CmdLine.h  Credits.c  Credits.h  DebugLog.c  DebugLog.h  Errors.h  FadeScreen.c  FadeScreen.h  GameInitOptionsScreen.c  GameInitOptionsScreen.h  GameInput.c  GameInput.h  GameInputInternal.h  GameLoop.c  GameRes.c  GameRes.h  GameScreen.c  GameSettings.c  GameVersion.c  GameVersion.h  Globals.h  HelpScreen.c  HelpScreen.h  Init.c  Intro.c  Intro.h  JA2Splash.c  JAScreens.c  JAScreens.h  LanguageDefines.h  LeanTypes.h  (+47 more)
ja2lib/Editor/: CursorModes.c  EditScreen.c  EditScreen.h  EditSys.c  EditorBuildings.c  EditorCallbackPrototypes.h  EditorCallbacks.c  EditorItems.c  EditorItems.h  EditorMapInfo.c  EditorMapInfo.h  EditorMercs.c  EditorMercs.h  EditorTaskbarCreation.c  EditorTaskbarUtils.c  EditorTaskbarUtils.h  EditorTerrain.c  LoadScreen.c  LoadScreen.h  MessageBox.c  NewSmooth.c  NewSmooth.h  PopupMenu.c  PopupMenu.h  SectorSummary.c  SectorSummary.h  SelectWin.c  SelectWin.h  SmartMethod.c  Smooth.c
ja2lib/Laptop/: AIM.c  AIMArchives.c  AIMFacialIndex.c  AIMHistory.c  AIMMembers.h  AIMPolicies.c  AIMSort.c  AimLinks.c  AimMembers.c  BobbyR.c  BobbyRAmmo.c  BobbyRArmour.c  BobbyRGuns.c  BobbyRMailOrder.c  BobbyRMailOrder.h  BobbyRMisc.c  BobbyRShipments.c  BobbyRUsed.c  BrokenLink.c  CharProfile.c  CharProfile.h  Email.c  Files.c  Finances.c  Finances.h  Florist.c  FloristCards.c  FloristGallery.c  FloristOrderForm.c  Funeral.c  History.c  History.h  IMPAboutUs.c  IMPAttributeEntrance.c  IMPAttributeFinish.c  IMPAttributeSelection.c  IMPAttributeSelection.h  IMPBeginScreen.c  IMPCompileCharacter.c  IMPConfirm.c  (+25 more)
ja2lib/SGP/: ButtonSystem.c  ButtonSystem.h  Container.c  CursorControl.c  CursorFileData.h  Debug.c  Debug.h  FileMan.c  FileMan.h  Font.c  Font.h  HImage.c  HImage.h  ImgFmt.h  ImpTGA.c  ImpTGA.h  Input.h  InputMousePos.h  Ja2Libs.c  Ja2Libs.h  LibraryDataBase.c  LibraryDataBase.h  LibraryDataBasePub.h  Line.c  MemMan.c  MemMan.h  MouseSystem.c  MouseSystem.h  MouseSystemMacros.h  PCX.c  PCX.h  Random.h  SGP.c  SGP.h  STCI.c  STCI.h  Shading.c  Shading.h  TRLE.h  TopicIDs.h  (+14 more)
ja2lib/Strategic/: AIViewer.c  Assignments.c  Assignments.h  AutoResolve.c  CampaignInit.c  CampaignTypes.h  CreatureSpreading.c  CreatureSpreading.h  GameClock.c  GameClock.h  GameEventHook.c  GameEventHook.h  GameEvents.c  GameEvents.h  GameInit.c  HourlyUpdate.c  MapScreen.c  MapScreen.h  MapScreenHelicopter.c  MapScreenHelicopter.h  MapScreenInterface.c  MapScreenInterface.h  MapScreenInterfaceBorder.c  MapScreenInterfaceBorder.h  MapScreenInterfaceBottom.c  MapScreenInterfaceMap.c  MapScreenInterfaceMap.h  MapScreenInterfaceMapInventory.c  MapScreenInterfaceMapInventory.h  MapScreenInterfaceTownMineInfo.c  Meanwhile.c  Meanwhile.h  MercContract.c  MercContract.h  PlayerCommand.c  PlayerCommand.h  PreBattleInterface.c  PreBattleInterface.h  QueenCommand.c  QueenCommand.h  (+28 more)
ja2lib/Tactical/: AirRaid.c  AirRaid.h  AnimationCache.c  AnimationControl.c  AnimationData.c  ArmsDealerInit.c  ArmsDealerInit.h  AutoBandage.c  AutoBandage.h  Boxing.c  Bullets.c  Bullets.h  Campaign.c  CivQuotes.c  CivQuotes.h  DialogueControl.c  DialogueControl.h  DisplayCover.c  DrugsAndAlcohol.c  EndGame.c  EnemySoldierSave.c  EnemySoldierSave.h  FOV.c  Faces.c  Faces.h  Gap.c  HandleDoors.c  HandleItems.c  HandleItems.h  HandleUI.c  HandleUI.h  Interface.c  Interface.h  InterfaceControl.c  InterfaceControl.h  InterfaceCursors.c  InterfaceDialogue.c  InterfaceDialogue.h  InterfaceItems.c  InterfaceItems.h  (+59 more)
ja2lib/TacticalAI/: AI.h  AIInternals.h  AIList.c  AIMain.c  AIUtils.c  Attacks.c  CreatureDecideAction.c  DecideAction.c  FindLocations.c  Knowledge.c  Medical.c  Movement.c  NPC.c  NPC.h  PanicButtons.c  QuestDebug.c  Realtime.c
ja2lib/TileEngine/: AmbientControl.c  Buildings.c  (+51 more)
jplatform/: CMakeLists.txt  README.md  jplatform_video.c  jplatform_video.h
jplatform/jplatform-windd2/: CMakeLists.txt  jplatform_video_windd2.c  jplatform_video_windd2.h
linux-tester/: main.c
platform-dummy/: CMakeLists.txt  dummy-platform.c  dummy-smk.c  platform-dummy.vcxproj
platform-linux/: CMakeLists.txt  FindFiles.c  platform-linux-stubs.c  platform-linux.c  platform_linux_io.c
platform-win32/: CMakeLists.txt  FindFiles.c  Input_win.c  Mss.h  Smack.h  SoundMan_win.c  TimerControl_win.c  Video_win.c  jplatform_video.c  platform-win32.vcxproj  platform_win.c  platform_win.h  platform_win_io.c
rustlib/: Cargo.toml  build.rs
tester/: tester.vcxproj
tools/: cached-build.py  prep-pub-branch.py  update_sources.py
unittester/: CMakeLists.txt  bugfixes.cpp  dummy-platform.c  ondisk-structures.cpp  savegame-structures.cpp  unittester.vcxproj
win32/: JA2.vcxproj  main_win.c
(+60 files in other folders)
